<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_sort"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="10dp"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        style="@style/BottomSheetTextItem"
        android:paddingTop="16dp"
        android:text="@string/sort" />

    <TextView
        android:id="@+id/bottom_sheet_sort_by_name"
        style="@style/BottomSheetTextItem"
        android:text="@string/by_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/bottom_sheet_sort_by_created"
        style="@style/BottomSheetTextItem"
        android:text="@string/by_created"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/bottom_sheet_sort_by_edited"
        style="@style/BottomSheetTextItem"
        android:text="@string/by_edited"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/bottom_sheet_sort_by_viewed"
        style="@style/BottomSheetTextItem"
        android:paddingBottom="16dp"
        android:text="@string/by_viewed"
        android:textColor="@color/black" />

</LinearLayout>